# ollama_web

./: .SRCINFO  LICENSE  PKGBUILD  README.md  main.py  model_chat.py  pyproject.toml
src/ollama_web/: __main__.py  app.py
src/ollama_web.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ollama_web_eldablo23307/: main.py
src/ollama_web_eldablo23307.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ollama_web_eldablo23307/static/style/: style.css
src/ollama_web_eldablo23307/templates/: home.html.jinja
src/templates/: home.html.jinja
templates/: home.html.jinja
