[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-web"
version = "1.0.0"
description = "Web interface for Ollama"
readme = "README.md"
authors = [{name = "eldablo23307"}]
requires-python = ">=3.9"
dependencies = [
    "ollama",
    "flask",
]

[project.scripts]
ollama-web = "ollama_web.__main__:main"

[project.urls]
Homepage = "https://github.com/eldablo23307/ollama_web"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ollama_web = ["templates/*.jinja"]